// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SegmentedControlIOS renders the segmented control with enabled 1`] = `
<RCTSegmentedControl
  enabled={true}
  onChange={[Function]}
  style={
    Array [
      Object {
        "height": 28,
      },
      undefined,
    ]
  }
  values={Array []}
/>
`;

exports[`SegmentedControlIOS renders the segmented control with enabled default value 1`] = `
<RCTSegmentedControl
  enabled={true}
  onChange={[Function]}
  style={
    Array [
      Object {
        "height": 28,
      },
      undefined,
    ]
  }
  values={Array []}
/>
`;

exports[`SegmentedControlIOS renders the segmented control with enabled set to false 1`] = `
<RCTSegmentedControl
  enabled={false}
  onChange={[Function]}
  style={
    Array [
      Object {
        "height": 28,
      },
      undefined,
    ]
  }
  values={Array []}
/>
`;

exports[`SegmentedControlIOS renders the segmented control with values 1`] = `
<RCTSegmentedControl
  enabled={true}
  onChange={[Function]}
  style={
    Array [
      Object {
        "height": 28,
      },
      undefined,
    ]
  }
  values={
    Array [
      "One",
      "Two",
    ]
  }
/>
`;

exports[`SegmentedControlIOS renders the segmented control with values default value 1`] = `
<RCTSegmentedControl
  enabled={true}
  onChange={[Function]}
  style={
    Array [
      Object {
        "height": 28,
      },
      undefined,
    ]
  }
  values={Array []}
/>
`;
